--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/eslint-parser": "7.21.3",
     "eslint": "8.37.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.27.5"
+    "eslint-plugin-import": "2.27.5",
+    "inquirer": "^9.2.11"
   }
 }
