--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "preinstall": "node install.js"
   },
+  "bin": {
+    "alpha_framework": "./install.js"
+
+  },
   "files": [
     ".github/**/*",
     "libs/*.js",
@@ -31,10 +35,11 @@
   },
   "homepage": "https://github.com/skumar09/alphaframework#readme",
   "dependencies": {
-    "@playwright/test": "^1.38",
     "@axe-core/playwright": "^4.7.0",
+    "@playwright/test": "^1.38.1",
     "axe-html-reporter": "^2.2.3",
     "axios": "^1.3.4",
+    "inquirer": "^9.2.11",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
