--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@babel/eslint-parser": "7.21.3",
     "eslint": "8.37.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-plugin-import": "2.27.5",
-    "inquirer": "^9.2.11"
+    "eslint-plugin-import": "2.27.5"
   }
 }
